--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -59,15 +59,14 @@ July 16-19, 2024 <br>
 </table>
 -->
 
+<div style="text-align: center;">
+  <h2 style="font-size: 40px">  General Chair </h2> 
+  <img src="image/Xi_Zhang.jpg" style="margin-right:20px; margin-top:5px " class="center" width="20%" height="20%"> 
+  </div>
+
 <table style="table-layout: fixed ; width: 100%; text-align: center;
 ">
-  <tr>
-    <th> <h2 style="font-size: 40px">  General Chair </h2> </th>
-  </tr>
-  <tr>
-    <td><img src="image/Xi_Zhang.jpg" width="20%" height="20%"></td>
-  </tr>
-  <tr>
+    <tr>
     <td style="font-size: 26px"> Professor <a href="https://people.engr.tamu.edu/xizhang/index.html"> 
       <strong> Xi Zhang </strong></a></td>
       </tr>
@@ -79,15 +78,15 @@ July 16-19, 2024 <br>
   </tr>
   </table>  
 
+<div style="text-align: center;margin-top:50px">
+  <h2 style="font-size: 40px">  TPC Chair </h2> 
+  <img src="image/Kunlun_Wang.jpg" style="margin-right:20px; margin-top:5px " class="center" width="20%" height="20%"> 
+  </div>
+
+
     <table style="table-layout: fixed ; width: 100%;text-align: center;
 ">
-  <tr>
-    <th><h2 style="margin-top:80px; font-size: 40px"> TPC Chair</h2></th>
-  </tr>
-  <tr>
-    <td><img src="image/Kunlun_Wang.jpg" width="20%" height="20%"></td>
-  </tr>
-  <tr>
+   <tr>
     <td style="font-size: 26px"> Professor <a href="https://faculty.ecnu.edu.cn/_s15/wkl_en/main.psp"> 
       <strong> Kunlun Wang </strong> </a></td>
   </tr>
@@ -98,6 +97,7 @@ July 16-19, 2024 <br>
  <td style="font-size: 26px"> klwang@cee.ecnu.edu.cn  </td>
   </tr>
 </table>
+
 
     <h2 style="margin-left:80px; margin-top:80px; margin-bottom:20px; font-size: 40px"> 
   Steering Committee
