--- a/Workshop_Registration.html
+++ b/Workshop_Registration.html
@@ -37,6 +37,7 @@ July 23-26, 2024 <br>
   </h1>
 
  <p align="justify" style="font-size: 20px">
-   COMING SOON! 
+   Please submit your Camera-Ready paper to: 
+   <a href="https://ieeecps.org/#!/auth/login?ak=1&pid=72H8He41O3uMnaS9WNcHkp"> </a>
  </p> 
 </html>
