--- a/Workshop_Registration.html
+++ b/Workshop_Registration.html
@@ -36,8 +36,12 @@ July 23-26, 2024 <br>
     Registration for International Workshop on DTMTDCS 2024
   </h1>
 
+  <p align="justify" style="font-size: 20px">
+      <a href="https://icdcs2024.icdcs.org/registration/"> Registration Fee </a>
+ </p>
+
  <p align="justify" style="font-size: 20px">
    Please submit your Camera-Ready paper to: 
-   <a href="https://ieeecps.org/#!/auth/login?ak=1&pid=72H8He41O3uMnaS9WNcHkp"> </a>
+   <a href="https://ieeecps.org/#!/auth/login?ak=1&pid=72H8He41O3uMnaS9WNcHkp"> Camera-Ready Submission Webpage </a>
  </p> 
 </html>
