--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ July 23-26, 2024, Jersey City, New Jersey, USA
                 <ul class="item_content" style="margin-left:50px; margin-top:10px; font-size: 20px">
                     
 			<li>
-                        <font color="black"><span>[05/2024] Workshop will be held at July 23, 2024.</span></font>
+                        <font color="black"><span>[05/2024] Workshop will be held at 9:00 am --12:00 pm, July 23, 2024.</span></font>
 		</li>
 			<li>
                         <font color="black"><span>[02/2024] Workshop call for paper is posted.</span></font>
