--- a/Keynote.html
+++ b/Keynote.html
@@ -72,7 +72,7 @@ July 23-26, 2024 <br>
      <img src="image/Trung_Duong2.jpg" style="margin-right:20px; margin-top:50px" width="15%" height="15%"> 
     </div>
   
-    <h3 style="margin-left:80px; margin-right:80px;  font-size: 26px"> <strong> Second Keynote Speaker: Prof. Trung Q. Duong, Memorial University, Canada </strong></h3>
+    <h3 style="margin-left:80px; margin-right:80px;  font-size: 26px"> <strong> Second Keynote Speaker: Prof. Trung Q. Duong, IEEE Fellow, Memorial University, Canada </strong></h3>
   <h3 style="margin-left:80px; margin-right:80px; font-size: 26px">
     <strong> Title: 6G Digital Twin Networks </strong></h3>
 
@@ -94,11 +94,12 @@ July 23-26, 2024 <br>
     </div>
   
     <h3 style="margin-left:80px; margin-right:80px;  font-size: 26px"> 
-      <strong> Third Keynote Speaker: Prof. Yang Yang, Hong Kong University of Science and Technology (Guangzhou), China  </strong></h3>
-  <h3 style="margin-left:80px; margin-right:80px; font-size: 26px"> <strong> Title: TBA </strong></h3>
+      <strong> Third Keynote Speaker: Prof. Yang Yang, IEEE Fellow, Hong Kong University of Science and Technology (Guangzhou), China  </strong></h3>
+  <h3 style="margin-left:80px; margin-right:80px; font-size: 26px"> <strong> Title: Collaborative Edge Computing for Large AI Models on Wireless Networks </strong></h3>
 
   <p align="justify" style="margin-left:80px; margin-right:80px;  font-size: 20px">
-    <strong> Abstract: </strong> TBA
+    <strong> Abstract: </strong> 
+    Large AI models have emerged as a crucial element in various intelligent applications at the network edge, such as voice assistants in smart homes and autonomous robotics in smart factories. Computing big AI models, e.g., for personalized fine-tuning and continual serving, poses significant challenges to edge devices due to the inherent conflict between limited computing resources and intensive workload associated with training. Despite the constraints of on-device training, traditional approaches usually resort to aggregating data and sending it to a remote cloud for centralized computation. Nevertheless, this approach is neither sustainable, which strains long-range backhaul transmission and energy-consuming datacenters, nor safely private, which shares users’ raw data with remote infrastructures. To address these challenges, we alternatively observe that prevalent edge environments usually contain a diverse collection of trusted edge devices with untapped idle resources, which can be leveraged for edge training acceleration. Motivated by this, iwn this talk, we propose to leverage edge collaboration, a novel mechanism that orchestrates a group of trusted edge devices as a resource pool, for expedited, sustainable large AI model computing at the edge. As an initial step, we present a comprehensive framework for building collaborative edge computing systems and analyze in-depth its merits and sustainable scheduling choices following its workflow. To further investigate the impact of its parallelism design, we empirically study a case of four typical parallelisms from the perspective of energy demand with realistic testbeds. Finally, we discuss open challenges for sustainable edge collaboration to point to future directions of edge-centric large AI model computing.
     </p>
 
    <p align="justify" style="margin-left:80px; margin-right:80px; font-size: 20px">
