--- a/Workshop_Program.html
+++ b/Workshop_Program.html
@@ -37,9 +37,11 @@ July 23-26, 2024 <br>
   </h1>
 
 
-  <p align="justify" style="font-size: 20px">
-   COMING SOON! 
- </p>
+ <h2 style="margin-left:50px; font-size: 28px"> 
+  DTMTDCS 2024 Program  July 23, 2024 9:00 am – 12:00 pm (3h)
+ </h2>
+
+  
 </body>
   
 </html>
