--- a/Workshop_Program.html
+++ b/Workshop_Program.html
@@ -41,6 +41,11 @@ July 23-26, 2024 <br>
   DTMTDCS 2024 Program  July 23, 2024 9:00 am – 12:00 pm (3h)
  </h2>
 
+  <p align="justify" style="font-size: 20px">
+      Paper session: 9:00 am - 10:00 am
+      (Each paper presentation includes 15 minutes of effective presentation time and 5 minutes for Q&A)
+ </p>
+
   
 </body>
   
