--- a/Workshop_Program.html
+++ b/Workshop_Program.html
@@ -42,9 +42,17 @@ July 23-26, 2024 <br>
  </h2>
 
   <ul style="margin-left:80px; font-size: 20px">
-      <li> Paper session: 9:00 am - 10:00 am </li>
-      <li>(Each paper presentation includes 15 minutes of effective presentation time
-        and 5 minutes for Q&A) </li>
+      <h3 style="margin-left:50px; font-size: 20px">  Paper session: 9:00 am - 10:00 am (Each paper presentation includes 15 minutes of effective presentation time
+        and 5 minutes for Q&A)</h3>
+
+      <li>  9:00-9:20 am: “Service Localization and User Satisfaction Enabled Multi- 
+     Tier Computing IoT System”  </li>
+      <li> Chenyu Gong (The Hong Kong University of Science and Technology (Guangzhou)), Mulei Ma (The Hong Kong University of Science and Technology (Guangzhou)), Liekang Zeng (The Hong Kong University of Science and Technology (Guangzhou)), Yang Yang (The Hong Kong University of Science and Technology (Guangzhou), Peng Cheng Laboratory, Terminus Group), Liantao Wu (East China Normal University) and Zening Liu (Purple Mountain Laboratories) </li>
+    <li>  </li>
+      <li>  </li>
+    <li>  </li>
+      <li>  </li>
+    
  </ul>
 
   
