--- a/Workshop_Program.html
+++ b/Workshop_Program.html
@@ -48,8 +48,8 @@ July 23-26, 2024 <br>
       <p>  9:00-9:20 am: “Service Localization and User Satisfaction Enabled Multi- 
      Tier Computing IoT System”  </p>
       <p> Chenyu Gong (The Hong Kong University of Science and Technology (Guangzhou)), Mulei Ma (The Hong Kong University of Science and Technology (Guangzhou)), Liekang Zeng (The Hong Kong University of Science and Technology (Guangzhou)), Yang Yang (The Hong Kong University of Science and Technology (Guangzhou), Peng Cheng Laboratory, Terminus Group), Liantao Wu (East China Normal University) and Zening Liu (Purple Mountain Laboratories) </p>
-    <li>  </li>
-      <li>  </li>
+    <p> 9:20-9:40 am: “Hierarchical Caching for Digital Twins Communications Over mURLLC-Based 6G Distributed-Computing Mobile Networks” </p>
+      <p> Xi Zhang and Qixuan Zhu (Texas A&M University, U.S.A.) </p>
     <li>  </li>
       <li>  </li>
     
