--- a/Workshop_Program.html
+++ b/Workshop_Program.html
@@ -50,8 +50,8 @@ July 23-26, 2024 <br>
       <p> Chenyu Gong (The Hong Kong University of Science and Technology (Guangzhou)), Mulei Ma (The Hong Kong University of Science and Technology (Guangzhou)), Liekang Zeng (The Hong Kong University of Science and Technology (Guangzhou)), Yang Yang (The Hong Kong University of Science and Technology (Guangzhou), Peng Cheng Laboratory, Terminus Group), Liantao Wu (East China Normal University) and Zening Liu (Purple Mountain Laboratories) </p>
     <p> 9:20-9:40 am: “Hierarchical Caching for Digital Twins Communications Over mURLLC-Based 6G Distributed-Computing Mobile Networks” </p>
       <p> Xi Zhang and Qixuan Zhu (Texas A&M University, U.S.A.) </p>
-    <li>  </li>
-      <li>  </li>
+    <p> 9:40-10:00 am: “Hybrid Intelligent Reflecting Surface and Cell-free Massive MIMO-Aided Over-the-Air Computation for Digital Twin” </p>
+      <p> Jiaying Di, Ni Zhang, Junjie Wan (East China Normal University, China), Sen Li (Guangxi Key Laboratory of Digital Infrastructure, China) and Kunlun Wang (East China Normal University, China) </p>
     
  </ul>
 
