--- a/Workshop_Program.html
+++ b/Workshop_Program.html
@@ -41,7 +41,6 @@ July 23-26, 2024 <br>
   DTMTDCS 2024 Program  July 23, 2024 9:00 am – 12:00 pm (3h)
  </h2>
 
-  <ul style="margin-left:80px; font-size: 20px">
       <h3 style="margin-left:50px; font-size: 20px">  Paper session: 9:00 am - 10:00 am (Each paper presentation includes 15 minutes of effective presentation time
         and 5 minutes for Q&A)</h3>
 
@@ -52,8 +51,7 @@ July 23-26, 2024 <br>
       <p> Xi Zhang and Qixuan Zhu (Texas A&M University, U.S.A.) </p>
     <p> 9:40-10:00 am: “Hybrid Intelligent Reflecting Surface and Cell-free Massive MIMO-Aided Over-the-Air Computation for Digital Twin” </p>
       <p> Jiaying Di, Ni Zhang, Junjie Wan (East China Normal University, China), Sen Li (Guangxi Key Laboratory of Digital Infrastructure, China) and Kunlun Wang (East China Normal University, China) </p>
-    
- </ul>
+    <hr class="line">
 
   
 </body>
