--- a/Workshop_Program.html
+++ b/Workshop_Program.html
@@ -37,20 +37,26 @@ July 23-26, 2024 <br>
   </h1>
 
 
- <h2 style="margin-left:50px; font-size: 28px"> 
+ <h2 style="margin-left:30px; font-size: 28px"> 
   DTMTDCS 2024 Program  July 23, 2024 9:00 am – 12:00 pm (3h)
  </h2>
 
-      <h3 style="margin-left:50px; font-size: 20px">  Paper session: 9:00 am - 10:00 am (Each paper presentation includes 15 minutes of effective presentation time
+      <h3 style="margin-left:30px; font-size: 20px">  Paper session: 9:00 am - 10:00 am (Each paper presentation includes 15 minutes of effective presentation time
         and 5 minutes for Q&A)</h3>
 
-      <p>  9:00-9:20 am: “Service Localization and User Satisfaction Enabled Multi- 
+      <p style="margin-left:30px; font-size: 20px">
+        9:00-9:20 am: “Service Localization and User Satisfaction Enabled Multi- 
      Tier Computing IoT System”  </p>
-      <p> Chenyu Gong (The Hong Kong University of Science and Technology (Guangzhou)), Mulei Ma (The Hong Kong University of Science and Technology (Guangzhou)), Liekang Zeng (The Hong Kong University of Science and Technology (Guangzhou)), Yang Yang (The Hong Kong University of Science and Technology (Guangzhou), Peng Cheng Laboratory, Terminus Group), Liantao Wu (East China Normal University) and Zening Liu (Purple Mountain Laboratories) </p>
-    <p> 9:20-9:40 am: “Hierarchical Caching for Digital Twins Communications Over mURLLC-Based 6G Distributed-Computing Mobile Networks” </p>
-      <p> Xi Zhang and Qixuan Zhu (Texas A&M University, U.S.A.) </p>
-    <p> 9:40-10:00 am: “Hybrid Intelligent Reflecting Surface and Cell-free Massive MIMO-Aided Over-the-Air Computation for Digital Twin” </p>
-      <p> Jiaying Di, Ni Zhang, Junjie Wan (East China Normal University, China), Sen Li (Guangxi Key Laboratory of Digital Infrastructure, China) and Kunlun Wang (East China Normal University, China) </p>
+      <p style="margin-left:30px; font-size: 20px"> 
+        Chenyu Gong (The Hong Kong University of Science and Technology (Guangzhou)), Mulei Ma (The Hong Kong University of Science and Technology (Guangzhou)), Liekang Zeng (The Hong Kong University of Science and Technology (Guangzhou)), Yang Yang (The Hong Kong University of Science and Technology (Guangzhou), Peng Cheng Laboratory, Terminus Group), Liantao Wu (East China Normal University) and Zening Liu (Purple Mountain Laboratories) </p>
+    <p style="margin-left:30px; font-size: 20px"> 
+      9:20-9:40 am: “Hierarchical Caching for Digital Twins Communications Over mURLLC-Based 6G Distributed-Computing Mobile Networks” </p>
+      <p style="margin-left:30px; font-size: 20px">
+        Xi Zhang and Qixuan Zhu (Texas A&M University, U.S.A.) </p>
+    <p style="margin-left:30px; font-size: 20px">
+      9:40-10:00 am: “Hybrid Intelligent Reflecting Surface and Cell-free Massive MIMO-Aided Over-the-Air Computation for Digital Twin” </p>
+      <p style="margin-left:30px; font-size: 20px">
+        Jiaying Di, Ni Zhang, Junjie Wan (East China Normal University, China), Sen Li (Guangxi Key Laboratory of Digital Infrastructure, China) and Kunlun Wang (East China Normal University, China) </p>
     <hr class="line">
 
   
