--- a/Workshop_Program.html
+++ b/Workshop_Program.html
@@ -41,24 +41,45 @@ July 23-26, 2024 <br>
   DTMTDCS 2024 Program  July 23, 2024 9:00 am – 12:00 pm (3h)
  </h2>
 
-      <h3 style="margin-left:30px; font-size: 20px">  Paper session: 9:00 am - 10:00 am (Each paper presentation includes 15 minutes of effective presentation time
+  <hr class="line">
+      <h3 style="margin-left:30px; font-size: 20px">  <b>Paper session: </b> 9:00 am - 10:00 am (Each paper presentation includes 15 minutes of effective presentation time
         and 5 minutes for Q&A)</h3>
 
       <p style="margin-left:30px; font-size: 20px">
         9:00-9:20 am: “Service Localization and User Satisfaction Enabled Multi- 
      Tier Computing IoT System”  </p>
-      <p style="margin-left:30px; font-size: 20px"> 
+      <p style="margin-left:50px; font-size: 20px"> 
         Chenyu Gong (The Hong Kong University of Science and Technology (Guangzhou)), Mulei Ma (The Hong Kong University of Science and Technology (Guangzhou)), Liekang Zeng (The Hong Kong University of Science and Technology (Guangzhou)), Yang Yang (The Hong Kong University of Science and Technology (Guangzhou), Peng Cheng Laboratory, Terminus Group), Liantao Wu (East China Normal University) and Zening Liu (Purple Mountain Laboratories) </p>
     <p style="margin-left:30px; font-size: 20px"> 
       9:20-9:40 am: “Hierarchical Caching for Digital Twins Communications Over mURLLC-Based 6G Distributed-Computing Mobile Networks” </p>
-      <p style="margin-left:30px; font-size: 20px">
+      <p style="margin-left:50px; font-size: 20px">
         Xi Zhang and Qixuan Zhu (Texas A&M University, U.S.A.) </p>
     <p style="margin-left:30px; font-size: 20px">
       9:40-10:00 am: “Hybrid Intelligent Reflecting Surface and Cell-free Massive MIMO-Aided Over-the-Air Computation for Digital Twin” </p>
-      <p style="margin-left:30px; font-size: 20px">
+      <p style="margin-left:50px; font-size: 20px">
         Jiaying Di, Ni Zhang, Junjie Wan (East China Normal University, China), Sen Li (Guangxi Key Laboratory of Digital Infrastructure, China) and Kunlun Wang (East China Normal University, China) </p>
     <hr class="line">
 
+  <h3 style="margin-left:30px; font-size: 20px">  <b> Keynote session: </b> 10:00 am – 12:00 pm</h3>
+
+    <p style="margin-left:30px; font-size: 20px">
+        10:00 - 10:40 am: “Statistical-QoS-Driven Digital Twins for mURLLC Over Distributed Computing Systems Based 6G Mobile Networks” </p>
+
+  <p style="margin-left:50px; font-size: 20px">
+        Keynote Speaker: Prof. Xi Zhang, IEEE Fellow, IEEE Distinguished Lecturer, Full Professor, Founding Director, Texas A&M University, College Station, Texas, U.S.A. </p>
+
+   <p style="margin-left:30px; font-size: 20px">
+        10:40 - 11:20 am: “6G Digital Twin Networks” </p>
+
+    <p style="margin-left:50px; font-size: 20px">
+       Keynote Speaker: Prof. Trung Q. Duong, IEEE Fellow, Memorial University, Canada </p>
+
+    <p style="margin-left:30px; font-size: 20px">
+        11:20 -12:00 pm: “Collaborative Edge Computing for Large AI Models on Wireless Networks”
+    </p>
+
+   <p style="margin-left:50px; font-size: 20px">
+      Keynote Speaker: Prof. Yang Yang, IEEE Fellow, Hong Kong University of Science and Technology (Guangzhou), China </p>
   
 </body>
   
