--- a/Workshop_Program.html
+++ b/Workshop_Program.html
@@ -75,12 +75,14 @@ July 23-26, 2024 <br>
        Keynote Speaker: Prof. Trung Q. Duong, IEEE Fellow, Memorial University, Canada </p>
 
     <p style="margin-left:30px; font-size: 20px">
-        11:20 -12:00 pm: “Collaborative Edge Computing for Large AI Models on Wireless Networks”
+        11:20am -12:00 pm: “Collaborative Edge Computing for Large AI Models on Wireless Networks”
     </p>
 
    <p style="margin-left:150px; font-size: 20px">
       Keynote Speaker: Prof. Yang Yang, IEEE Fellow, Hong Kong University of Science and Technology (Guangzhou), China </p>
-  
+
+  <p style="margin-left:150px; font-size: 20px">
+  </p>
 </body>
   
 </html>
