--- a/Workshop_Program.html
+++ b/Workshop_Program.html
@@ -38,7 +38,7 @@ July 23-26, 2024 <br>
 
 
  <h2 style="margin-left:30px; font-size: 28px"> 
-  DTMTDCS 2024 Program  July 23, 2024 9:00 am – 12:00 pm (3h)
+  DTMTDCS 2024 Program  July 23, 2024 9:00 am – 12:00 pm (3h), Room: Newport I
  </h2>
 
   <hr class="line">
