--- a/Workshop_Program.html
+++ b/Workshop_Program.html
@@ -69,20 +69,21 @@ July 23-26, 2024 <br>
         Keynote Speaker: Prof. Xi Zhang, IEEE Fellow, IEEE Distinguished Lecturer, Full Professor, Founding Director, Texas A&M University, College Station, Texas, U.S.A. </p>
 
    <p style="margin-left:30px; font-size: 20px">
-        10:40 - 11:20 am: “6G Digital Twin Networks” </p>
-
-    <p style="margin-left:150px; font-size: 20px">
-       Keynote Speaker: Prof. Trung Q. Duong, IEEE Fellow, Memorial University, Canada </p>
-
-    <p style="margin-left:30px; font-size: 20px">
-        11:20am -12:00 pm: “Collaborative Edge Computing for Large AI Models on Wireless Networks”
+        10:40 - 11:20 am: “Collaborative Edge Computing for Large AI Models on Wireless Networks”
     </p>
 
    <p style="margin-left:150px; font-size: 20px">
       Keynote Speaker: Prof. Yang Yang, IEEE Fellow, Hong Kong University of Science and Technology (Guangzhou), China </p>
 
-  <p style="margin-left:150px; font-size: 20px">
-  </p>
+  
+  <p style="margin-left:30px; font-size: 20px">
+        11:20am -12:00 pm:  “6G Digital Twin Networks” </p>
+
+    <p style="margin-left:150px; font-size: 20px">
+       Keynote Speaker: Prof. Trung Q. Duong, IEEE Fellow, Memorial University, Canada </p>
+
+    
+ 
 </body>
   
 </html>
