--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -98,6 +98,26 @@ July 23-26, 2024 <br>
   </tr>
 </table>
 
+    <div style="text-align: center;margin-top:50px">
+  <h2 style="font-size: 40px">  Website Chair </h2> 
+  <img src="image/Qixuan_Zhu.jpg" style="margin-right:20px; margin-top:5px " class="center" width="20%" height="20%"> 
+  </div>
+
+
+    <table style="table-layout: fixed ; width: 100%;text-align: center;
+">
+   <tr>
+    <td style="font-size: 26px"> Dr. <a href="https://faculty.ecnu.edu.cn/_s15/wkl_en/main.psp"> 
+      <strong> Qixuan Zhu </strong> </a></td>
+  </tr>
+    <tr>
+    <td style="font-size: 26px"> Texas A&M University, College Station, U.S.A.</td>
+  </tr>
+<tr>
+ <td style="font-size: 26px"> qixuan@tamu.edu  </td>
+  </tr>
+</table>
+
 
     <h2 style="margin-left:80px; margin-top:80px; margin-bottom:20px; font-size: 40px"> 
   Steering Committee
