--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -107,7 +107,7 @@ July 23-26, 2024 <br>
     <table style="table-layout: fixed ; width: 100%;text-align: center;
 ">
    <tr>
-    <td style="font-size: 26px"> Dr. <a href="https://faculty.ecnu.edu.cn/_s15/wkl_en/main.psp"> 
+    <td style="font-size: 26px"> Dr. <a href="https://scholar.google.com/citations?user=8m-ZgQsAAAAJ&hl=en"> 
       <strong> Qixuan Zhu </strong> </a></td>
   </tr>
     <tr>
